[gd_scene load_steps=12 format=2]

[ext_resource path="res://BlenderExport/Container/Container.glb" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Container.gd" type="Script" id=2]
[ext_resource path="res://Textures/CircleProgressTexture.svg" type="Texture" id=3]
[ext_resource path="res://BlenderExport/Chute/Chute.glb" type="PackedScene" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 4.47752, 1.9427, 1.82315 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 6.40754, 1.9427, 3.70413 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1.66909, 0.349713, 1.28755 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.962091, 0.349713, 0.83739 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.278431 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="CylinderMesh" id=6]

[sub_resource type="Animation" id=7]
length = 3.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("UserInterface/TextureProgressParent/TextureProgress:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 100, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2.9 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("UserInterface/TextureProgressParent/TextureProgress:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("PackagedIndicator:translation:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("PackagedIndicator:translation:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1.76216, -0.25, 0, 0.25, 0, 1.96283, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("PackagedIndicator:translation:z")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("PackagedIndicator:scale:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0.799907, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("PackagedIndicator:scale:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0.799907, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("PackagedIndicator:scale:z")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0.799907, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}
tracks/8/type = "value"
tracks/8/path = NodePath("PackagedIndicator:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Container" type="KinematicBody"]
collision_layer = 41
collision_mask = 41
script = ExtResource( 2 )
PackagedIndicatorNodePath = NodePath("PackagedIndicator")
BeingCarriedIndicatorNodePath = NodePath("BeingCarriedIndicator")

[node name="ContainerCollision" type="CollisionShape" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Container6" parent="." instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )

[node name="ContainerArea" type="Area" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
collision_layer = 2
collision_mask = 2

[node name="InteractCollision" type="CollisionShape" parent="ContainerArea"]
shape = SubResource( 2 )

[node name="PICKUPAREA" type="Area" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
input_capture_on_drag = true
collision_layer = 32
collision_mask = 32

[node name="InteractCollision" type="CollisionShape" parent="PICKUPAREA"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.25212, 0 )
shape = SubResource( 3 )

[node name="FloorDetectorArea" type="Area" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
input_capture_on_drag = true
collision_layer = 32
collision_mask = 32

[node name="InteractCollision" type="CollisionShape" parent="FloorDetectorArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.7567, 0 )
shape = SubResource( 4 )

[node name="UserInterface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PackageUI" type="Panel" parent="UserInterface"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -77.0
margin_top = -64.0
margin_right = 78.0
margin_bottom = -28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UserInterface/PackageUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.5
margin_top = -7.0
margin_right = 65.5
margin_bottom = 7.0
text = "xxx"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgressParent" type="Control" parent="UserInterface"]
margin_left = 512.102
margin_top = 511.952
margin_right = 552.102
margin_bottom = 551.952

[node name="TextureProgress" type="TextureProgress" parent="UserInterface/TextureProgressParent"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -35.102
margin_top = -55.102
margin_right = -5.10199
margin_bottom = -25.102
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
fill_mode = 4
tint_under = Color( 1, 1, 1, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UserInterface/TextureProgressParent/TextureProgress"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -43.0
margin_right = 45.0
margin_bottom = -22.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UserInterface/TextureProgressParent/TextureProgress"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.0
margin_top = -39.472
margin_right = 50.0
margin_bottom = -25.472
text = "Packaging..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PackagedIndicator" type="Spatial" parent="."]
transform = Transform( -3.4965e-08, 0, -0.799907, 0, 0.799907, 0, 0.799907, 0, -3.4965e-08, 0, 1.76216, 0 )
visible = false

[node name="MeshInstance" type="MeshInstance" parent="PackagedIndicator"]
transform = Transform( -3.15702e-09, 4.574, -0.0452377, -0.125872, -1.3725e-07, -3.67614e-10, -1.60979e-09, 1.76157, 0.117462, 0, 0, 0 )
mesh = SubResource( 6 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="PackagedIndicator"]
transform = Transform( -7.15425e-09, 4.54953, 0.0468366, -0.125872, -2.93973e-07, -3.9508e-10, 2.44237e-09, -1.82383, 0.116834, 0, 0, 0 )
mesh = SubResource( 6 )
material/0 = null

[node name="BeingCarriedIndicator" type="Spatial" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 1.96283, 0 )
visible = false

[node name="MeshInstance3" type="MeshInstance" parent="BeingCarriedIndicator"]
transform = Transform( -0.0699106, 2.28978, -0.0376186, -0.104148, -1.62768, 0.0132599, -0.0104614, 0.9023, 0.119385, 2.22273, 1.21895, 0.893674 )
mesh = SubResource( 6 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="BeingCarriedIndicator"]
transform = Transform( 0.0666274, 2.32709, 0.03937, -0.106257, 1.55332, 0.0127457, -0.0106733, -0.937247, 0.118875, -2.2107, 1.22093, 0.911831 )
mesh = SubResource( 6 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="BeingCarriedIndicator"]
transform = Transform( 0.0666274, 2.33615, -0.0383804, -0.106052, 1.57205, -0.00997545, 0.0125502, 0.881823, 0.119462, -2.21634, 1.20279, -0.850654 )
mesh = SubResource( 6 )
material/0 = null

[node name="MeshInstance4" type="MeshInstance" parent="BeingCarriedIndicator"]
transform = Transform( -0.0699106, 2.28089, 0.0385884, -0.103947, -1.64069, -0.0118441, 0.0123011, -0.901231, 0.119224, 2.2172, 1.20445, -0.868844 )
mesh = SubResource( 6 )
material/0 = null

[node name="ContainerAnimations" type="AnimationPlayer" parent="."]
anims/ProgressAnimation = SubResource( 7 )

[node name="Chute" type="Spatial" parent="."]
visible = false

[node name="Chute002" parent="Chute" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 0.848048, 0.529919, 0, -0.529919, 0.848048, 0, 6.49858, -3.80427 )

[node name="Chute001" parent="Chute" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 0.848048, -0.529919, 0, 0.529919, 0.848048, 0, 6.49858, 3.80123 )
